# galactic

./: .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .pre-commit-config.yaml  .yamlfmt  .yamllint.yaml  .yamllint.yml  AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  Makefile  NOTICE  README.md  Taskfile.yaml  flake.nix  go.mod  go.sum  renovate.json
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json  post-create.sh
.devcontainer/containerlab-dood/: devcontainer.json  post-create.sh
.devcontainer/galactic/: README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yaml  ci.yml  publish.yaml  release.yaml  release.yml
bgp/: README.md
cmd/galactic-agent/: main.go
cmd/galactic-cni/: main.go  main_test.go
cmd/galactic-router/: main.go  main_test.go  root.go  root_test.go
config/: kustomization.yaml
docs/: agent-startup.md  architecture-overview.md  cni-cmd-sequence.md  cni-sequence.md  configuration.md  review-plan.md
lab/: README.md
licenses/: AGPL-3.0.txt
router/: .dockerignore  .flake8  Dockerfile  Dockerfile.test  pyproject.toml
router/alembic/: env.py
router/alembic/versions/: 042d8775f6e0_add_created_field_to_registration_table.py  0e50c4ae5859_init.py
router/features/: environment.py
router/features/steps/: router_steps.py
router/galactic_router/: __init__.py  bus.py  events.py
router/galactic_router/proto/: remote.proto  remote_pb2.py
router/galactic_router/router/: mqtt.py  static.py
scripts/: ci.sh  test-local.sh
(+560 files in other folders)
