[project]
name = "galactic-router"
version = "0.0.1"
description = "Routing engine for Galactic"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.4.0",
    "aiorun>=2025.1.1",
    "alembic>=1.16.5",
    "bubus>=1.5.5",
    "click>=8.2.1",
    "protobuf>=6.32.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
mysql = [
    "mysqlclient>=2.2.7",
]
test = [
    "behave>=1.3.1",
    "deepdiff>=8.6.0",
    "time-machine>=2.19.0",
]
lint = [
    "flake8>=7.3.0",
    "wemake-python-styleguide>=1.4.0",
]

[project.urls]
Documentation = "http://datum.net/docs/galactic-vpc/#galactic-router"

[project.scripts]
galactic-router = "galactic_router:run"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
